--- a/JournalCK2/UI/Base.lproj/Main.storyboard
+++ b/JournalCK2/UI/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Hr1-gH-dRN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,13 +12,13 @@
         <!--Entries List-->
         <scene sceneID="wxd-lH-Ex7">
             <objects>
-                <tableViewController id="Ujs-GB-q8X" sceneMemberID="viewController">
+                <tableViewController id="Ujs-GB-q8X" customClass="EntryListTableViewController" customModule="JournalCK2" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="gcT-Hi-ooy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" textLabel="4IO-f0-zcB" detailTextLabel="Vnl-tj-rYe" rowHeight="59" style="IBUITableViewCellStyleSubtitle" id="MkP-Lc-Fg5">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="entryCell" textLabel="4IO-f0-zcB" detailTextLabel="Vnl-tj-rYe" rowHeight="59" style="IBUITableViewCellStyleSubtitle" id="MkP-Lc-Fg5">
                                 <rect key="frame" x="0.0" y="28" width="375" height="59"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MkP-Lc-Fg5" id="PsT-NG-wLg">
@@ -66,7 +66,7 @@
         <!--Compose Entry-->
         <scene sceneID="QXY-WS-qiO">
             <objects>
-                <viewController id="R5z-xe-5Zg" sceneMemberID="viewController">
+                <viewController id="R5z-xe-5Zg" customClass="EntryDetailViewController" customModule="JournalCK2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="N5C-f8-3Uv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -76,6 +76,9 @@
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title.." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EAI-el-Eo6">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="c0y-8W-mkw"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -91,19 +94,36 @@
                                     </textField>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created: 01-01-2000 12:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqZ-Ze-Lun">
+                                <rect key="frame" x="177.5" y="639" width="187.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Cz7-gx-8UI" firstAttribute="leading" secondItem="8gh-tz-cXJ" secondAttribute="leading" constant="10" id="444-zr-r6J"/>
+                            <constraint firstItem="hqZ-Ze-Lun" firstAttribute="bottom" secondItem="8gh-tz-cXJ" secondAttribute="bottom" constant="-10" id="5eH-L8-rzF"/>
                             <constraint firstItem="8gh-tz-cXJ" firstAttribute="trailing" secondItem="Cz7-gx-8UI" secondAttribute="trailing" constant="10" id="DTH-Sl-xCq"/>
+                            <constraint firstItem="8gh-tz-cXJ" firstAttribute="trailing" secondItem="hqZ-Ze-Lun" secondAttribute="trailing" constant="10" id="FnF-jE-q6n"/>
                             <constraint firstItem="Cz7-gx-8UI" firstAttribute="centerX" secondItem="N5C-f8-3Uv" secondAttribute="centerX" id="NrB-vQ-xAe"/>
                             <constraint firstItem="Cz7-gx-8UI" firstAttribute="top" secondItem="8gh-tz-cXJ" secondAttribute="top" constant="10" id="Qs9-mK-upz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8gh-tz-cXJ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Compose Entry" id="2vy-7a-feE">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="n4S-oE-baC"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="n4S-oE-baC">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="R5z-xe-5Zg" id="XVo-sO-8mm"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="dateLabel" destination="hqZ-Ze-Lun" id="enn-2j-YSY"/>
+                        <outlet property="entryNotesTextField" destination="xvc-vH-AKX" id="B8I-ve-exG"/>
+                        <outlet property="entryTitleTextField" destination="EAI-el-Eo6" id="4C3-lT-RHl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="piQ-xd-BEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
